--- a/csr-activities.html
+++ b/csr-activities.html
@@ -21,7 +21,7 @@
             <img class="img-fluid logo" src="images/ansaf-logo.png" alt="">
           </a>
         </div>
-        <div class="col-lg-8 menu-wrap ml-lg-5">
+        <div class="col-lg-8 menu-wrap ml-lg-5 d-none d-lg-block">
           <ul>
             <li>
               <a href="about.html">
@@ -72,7 +72,7 @@
             </li> 
           </ul>
         </div>
-        <div class="col-lg-1 lang-ansaf">
+        <div class="col-lg-1 lang-ansaf d-none d-lg-block">
           <div class="divider"></div>
           <ul>
             <li>
@@ -86,13 +86,13 @@
 </div>
     <div class="container-fluid csr-top">
       <div class="row">
-        <div class="col-lg-12 pl-lg-0">
+        <div class="col-lg-12 pl-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
           <div class="content-wrapper d-flex">
             <div class="inline-block">
-                <img class="w-auto mt-lg-3" src="images/line-gray-11.png" alt="">
+                <img class="mt-3" src="images/line-gray-11.png" alt="">
             </div>
-            <div class="inline-block pl-lg-4">
+            <div class="inline-block pl-lg-4 pl-2">
                 <h2 class="text-dark-blue">
                   CSR Activities
                 </h2>
@@ -103,8 +103,9 @@
     </div> 
     <div class="container-fluid csr-mid bg-dark-blue">
       <div class="row">
-        <div class="col-lg-12 px-lg-0">
-          <img class="content-mid" src="images/csr-mid-first-section-07.png" alt="">
+        <div class="col-lg-12 px-0">
+          <img class="content-mid d-none d-lg-block" src="images/csr-mid-first-section-07.png" alt="">
+          <img class="content-mid d-lg-none" src="images/csr-mid-first-section-mobile-07.jpg" alt="">
           <div class="content-wrapper d-flex">
             <div class="inline-block pl-lg-5 offset-lg-1">
                 <h2 class="text-white mb-lg-4">
@@ -124,40 +125,50 @@
     </div>
     <div class="container-fluid csr-tab">
       <div class="row">
-        <div class="col-lg-12 px-lg-0">
+        <div class="col-lg-12 px-0">
           <!-- Nav tabs -->
           <ul class="nav nav-tabs text-center" id="myTab" role="tablist">
-            <li class="col px-lg-0">
+            <li class="col px-0">
               <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Petangus Coal Mine</a>
             </li>
-            <li class="col px-lg-0">
+            <li class="col px-0">
               <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Purwajaya Coal Mine</a>
             </li>
-            <li class="col px-lg-0">
+            <li class="col px-0">
               <a class="nav-link" id="others-tab" data-toggle="tab" href="#others" role="tab" aria-controls="others" aria-selected="false">Lainnya</a>
             </li>
           </ul>
           <!-- Tab panes -->
           <div class="tab-content">
             <div class="tab-pane pt-lg-5 active" id="home" role="tabpanel" aria-labelledby="home-tab">
-              <div class="d-flex pt-lg-5 mt-lg-5">
-                <div class="col-lg-7 pl-lg-0">
+              <div class="d-lg-flex pt-5 mt-lg-5">
+                <div class="col-lg-7 col-12 pl-lg-0">
                   <img class="img-fluid" src="images/csr-program-tab-content-07.jpg" alt="">
                 </div>
-                <div class="col-lg-5 details">
+                <div class="col-lg-5 col-12 details mt-lg-0 mt-5 mb-lg-3 mb-2">
                   <h4 class="text-dark-blue">
                     Petangus Coal Mine
                   </h4>
-                  <p class="text-orange mb-lg-4">
+                  <p class="text-orange mb-4">
                     Penghargaan dari Baznas Provinsi<br>
                     Kalimantan Timur Tahun 2019
                   </p>
-                  <p class="text-gray">
+                  <p class="text-gray d-none d-lg-block">
                     Hal pokok yang kami terapkan adalah<br>
                     memberdayakan. Peduli dan saling berbagi<br>
                     tidak mesti dengan materi. Ketika tangan<br>
                     dapat menolong, kami segera lakukan. Ada<br>
                     sekolah atau lembaga pendidikan lain perlu<br>
+                    pengetahuan dan peningkatan kompetensi<br>
+                    siswa-siswa nya, kami pun tergerak untuk<br>
+                    berbagi pengetahuan.
+                  </p>
+                  <p class="text-gray d-lg-none">
+                    Hal pokok yang kami terapkan adalah<br>
+                    memberdayakan. Peduli dan saling berbagi<br>
+                    tidak mesti dengan materi. Ketika tangan dapat<br>
+                    menolong, kami segera lakukan. Ada sekolah<br>
+                    atau lembaga pendidikan lain perlu<br>
                     pengetahuan dan peningkatan kompetensi<br>
                     siswa-siswa nya, kami pun tergerak untuk<br>
                     berbagi pengetahuan.
@@ -166,19 +177,19 @@
               </div>
             </div>
             <div class="tab-pane pt-lg-5" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-              <div class="d-flex pt-lg-5 mt-lg-5">
-                <div class="col-lg-7 pl-lg-0">
+              <div class="d-lg-flex pt-5 mt-lg-5">
+                <div class="col-lg-7 col-12 pl-lg-0">
                   <img class="img-fluid" src="images/csr-program-tab-content-07.jpg" alt="">
                 </div>
-                <div class="col-lg-5 details">
+                <div class="col-lg-5 col-12 details mt-lg-0 mt-5 mb-lg-3 mb-2">
                   <h4 class="text-dark-blue">
                     Purwajaya Coal Mine
                   </h4>
-                  <p class="text-orange mb-lg-4">
+                  <p class="text-orange mb-4">
                     Penghargaan dari Baznas Provinsi<br>
                     Kalimantan Timur Tahun 2019   
                   </p>
-                  <p class="text-gray">
+                  <p class="text-gray d-none d-lg-block">
                     Hal pokok yang kami terapkan adalah<br>
                     memberdayakan. Peduli dan saling berbagi<br>
                     tidak mesti dengan materi. Ketika tangan<br>
@@ -188,28 +199,48 @@
                     siswa-siswa nya, kami pun tergerak untuk<br>
                     berbagi pengetahuan.
                   </p>
+                  <p class="text-gray d-lg-none">
+                    Hal pokok yang kami terapkan adalah<br>
+                    memberdayakan. Peduli dan saling berbagi<br>
+                    tidak mesti dengan materi. Ketika tangan dapat<br>
+                    menolong, kami segera lakukan. Ada sekolah<br>
+                    atau lembaga pendidikan lain perlu<br>
+                    pengetahuan dan peningkatan kompetensi<br>
+                    siswa-siswa nya, kami pun tergerak untuk<br>
+                    berbagi pengetahuan.
+                  </p>
                 </div>
               </div>
             </div>
             <div class="tab-pane pt-lg-5" id="others" role="tabpanel" aria-labelledby="others-tab">
-              <div class="d-flex pt-lg-5 mt-lg-5">
-                <div class="col-lg-7 pl-lg-0">
+              <div class="d-lg-flex pt-5 mt-lg-5">
+                <div class="col-lg-7 col-12 pl-lg-0">
                   <img class="img-fluid" src="images/csr-program-tab-content-07.jpg" alt="">
                 </div>
-                <div class="col-lg-5 details">
+                <div class="col-lg-5 col-12 details mt-lg-0 mt-5 mb-lg-3 mb-2">
                   <h4 class="text-dark-blue">
                     Lain-lainnya
                   </h4>
-                  <p class="text-orange mb-lg-4">
+                  <p class="text-orange mb-4">
                     Penghargaan dari Baznas Provinsi<br>
                     Kalimantan Timur Tahun 2019   
                   </p>
-                  <p class="text-gray">
+                  <p class="text-gray d-none d-lg-block">
                     Hal pokok yang kami terapkan adalah<br>
                     memberdayakan. Peduli dan saling berbagi<br>
                     tidak mesti dengan materi. Ketika tangan<br>
                     dapat menolong, kami segera lakukan. Ada<br>
                     sekolah atau lembaga pendidikan lain perlu<br>
+                    pengetahuan dan peningkatan kompetensi<br>
+                    siswa-siswa nya, kami pun tergerak untuk<br>
+                    berbagi pengetahuan.
+                  </p>
+                  <p class="text-gray d-lg-none">
+                    Hal pokok yang kami terapkan adalah<br>
+                    memberdayakan. Peduli dan saling berbagi<br>
+                    tidak mesti dengan materi. Ketika tangan dapat<br>
+                    menolong, kami segera lakukan. Ada sekolah<br>
+                    atau lembaga pendidikan lain perlu<br>
                     pengetahuan dan peningkatan kompetensi<br>
                     siswa-siswa nya, kami pun tergerak untuk<br>
                     berbagi pengetahuan.
