--- a/csr.html
+++ b/csr.html
@@ -125,32 +125,32 @@
     </div>
     <div class="container-fluid csr-tab">
       <div class="row">
-        <div class="col-lg-12 px-lg-0">
+        <div class="col-lg-12 px-0">
           <!-- Nav tabs -->
           <ul class="nav nav-tabs text-center" id="myTab" role="tablist">
-            <li class="col px-lg-0">
+            <li class="col px-0">
               <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Ansaf Peduli</a>
             </li>
-            <li class="col px-lg-0">
+            <li class="col px-0">
               <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Ansaf Sehat</a>
             </li>
           </ul>
           <!-- Tab panes -->
           <div class="tab-content">
             <div class="tab-pane pt-lg-5 active" id="home" role="tabpanel" aria-labelledby="home-tab">
-              <div class="d-flex pt-lg-5 mt-lg-5">
-                <div class="col-lg-7 pl-lg-0">
+              <div class="d-lg-flex pt-5 mt-lg-5">
+                <div class="col-lg-7 col-12 pl-lg-0">
                   <img class="img-fluid" src="images/csr-program-tab-content-07.jpg" alt="">
                 </div>
-                <div class="col-lg-5 details">
-                  <h4 class="text-dark-blue">
+                <div class="col-lg-5 col-12 details">
+                  <h4 class="text-dark-blue mt-lg-0 mt-5 mb-lg-3 mb-2">
                     Ansaf Peduli
                   </h4>
-                  <p class="text-orange mb-lg-4">
+                  <p class="text-orange mb-4">
                     Penghargaan dari Baznas Provinsi<br>
                     Kalimantan Timur Tahun 2019
                   </p>
-                  <p class="text-gray">
+                  <p class="text-gray d-none d-lg-block">
                     Hal pokok yang kami terapkan adalah<br>
                     memberdayakan. Peduli dan saling berbagi<br>
                     tidak mesti dengan materi. Ketika tangan<br>
@@ -160,28 +160,48 @@
                     siswa-siswa nya, kami pun tergerak untuk<br>
                     berbagi pengetahuan.
                   </p>
+                  <p class="text-gray d-lg-none">
+                    Hal pokok yang kami terapkan adalah<br>
+                    memberdayakan. Peduli dan saling berbagi<br>
+                    tidak mesti dengan materi. Ketika tangan dapat<br>
+                    menolong, kami segera lakukan. Ada sekolah<br>
+                    atau lembaga pendidikan lain perlu<br>
+                    pengetahuan dan peningkatan kompetensi<br>
+                    siswa-siswa nya, kami pun tergerak untuk<br>
+                    berbagi pengetahuan.
+                  </p>
                 </div>
               </div>
             </div>
             <div class="tab-pane pt-lg-5" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-              <div class="d-flex pt-lg-5 mt-lg-5">
-                <div class="col-lg-7 pl-lg-0">
-                  <img class="img-fluid" src="images/csr-program-tab-content-07.jpg" alt="">
+              <div class="d-lg-flex pt-5 mt-lg-5">
+                <div class="col-lg-7 col-12 pl-lg-0">
+                  <img class="img-fluid" src="images/csr-program-tab-content-08.jpg" alt="">
                 </div>
-                <div class="col-lg-5 details">
-                  <h4 class="text-dark-blue">
+                <div class="col-lg-5 col-12 details">
+                  <h4 class="text-dark-blue mt-lg-0 mt-5 mb-lg-3 mb-2">
                     Ansaf Sehat
                   </h4>
-                  <p class="text-orange mb-lg-4">
+                  <p class="text-orange mb-4">
                     Penghargaan dari Baznas Provinsi<br>
                     Kalimantan Timur Tahun 2019   
                   </p>
-                  <p class="text-gray">
+                  <p class="text-gray d-none d-lg-block">
                     Hal pokok yang kami terapkan adalah<br>
                     memberdayakan. Peduli dan saling berbagi<br>
                     tidak mesti dengan materi. Ketika tangan<br>
                     dapat menolong, kami segera lakukan. Ada<br>
                     sekolah atau lembaga pendidikan lain perlu<br>
+                    pengetahuan dan peningkatan kompetensi<br>
+                    siswa-siswa nya, kami pun tergerak untuk<br>
+                    berbagi pengetahuan.
+                  </p>
+                  <p class="text-gray d-lg-none">
+                    Hal pokok yang kami terapkan adalah<br>
+                    memberdayakan. Peduli dan saling berbagi<br>
+                    tidak mesti dengan materi. Ketika tangan dapat<br>
+                    menolong, kami segera lakukan. Ada sekolah<br>
+                    atau lembaga pendidikan lain perlu<br>
                     pengetahuan dan peningkatan kompetensi<br>
                     siswa-siswa nya, kami pun tergerak untuk<br>
                     berbagi pengetahuan.
@@ -196,15 +216,20 @@
     <div class="container-fluid footer-content">
       <div class="row text-center">
           <div class="col-lg-12">
-              <h4 class="text-dark-blue pb-lg-4">
+              <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
                 Ingin tau lebih mengenai Program kami?
+              </h4>
+              <h4 class="text-dark-blue pb-lg-4 pb-5 d-lg-none">
+                Ingin tau lebih<br>
+                mengenai<br>
+                Program kami?
               </h4>
           </div>
       </div>
       <div class="row">
           <div class="container">
               <div class="row text-center">
-                  <div class="col-lg-12">
+                  <div class="col-lg-12 pb-5">
                     <a href="contact.html" class="link-orange-border mx-lg-4">
                       <span class="text-orange">
                         HUBUNGI KAMI
@@ -215,27 +240,27 @@
           </div>
       </div>
   </div>
-  <div class="container-fluid footer-details mb-lg-5">
+  <div class="container-fluid footer-details mb-5">
     <div class="row">
       <div class="col-lg-2">
           <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 py-lg-0 py-4">
           <p class="text-gray">
               Kantor Taman E3.3 Unit B5 Jl Dr Ide Anak<br>
               Agung Gede Agung Lot 8.6-8.7 Kawasan Mega<br>
-              KuninganJakarta 12950
+              Kuningan Jakarta 12950
           </p>
       </div>
       <div class="col-lg-3 fax-column text-center">
           <a href="#" class="link-orange-border">
              <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> (0541) 260 226</span> 
           </a>
-          <p class="text-gray mt-lg-3">
+          <p class="text-gray mt-lg-3 mt-2 fax-details">
               Fax (0541) 261 532
           </p>
       </div>
-      <div class="col-lg-2 pl-lg-0 offset-lg-1">
+      <div class="col-lg-2 link-socmed pl-lg-0 offset-lg-1 pt-lg-0 pt-5">
           <a href="#" class="text-gray d-block">
               <i class="fab fa-facebook-square"></i> Ansaf Indonesia
           </a>
@@ -247,16 +272,16 @@
           </a>
       </div>
   </div>
-  </div>
-  <div class="container-fluid footer bg-dark-blue">
-      <div class="row">
-          <div class="col-lg-12">
-              <p class="text-white mt-lg-3 text-center">
-                  Copyright © 2020 PT Ansaf Inti Resources
-              </p>
-          </div>
-      </div>
-  </div>
+</div>
+<div class="container-fluid footer bg-dark-blue">
+    <div class="row">
+        <div class="col-lg-12">
+            <p class="text-white mt-3 text-center">
+                Copyright © 2020 PT Ansaf Inti Resources
+            </p>
+        </div>
+    </div>
+</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
