--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
             <img class="img-fluid logo" src="images/ansaf-logo.png" alt="">
           </a>
         </div>
-        <div class="col-lg-8 menu-wrap ml-lg-5">
+        <div class="col-lg-8 menu-wrap ml-lg-5 d-none d-lg-block">
           <ul>
             <li>
               <a href="about.html">
@@ -72,7 +72,7 @@
             </li> 
           </ul>
         </div>
-        <div class="col-lg-1 lang-ansaf">
+        <div class="col-lg-1 lang-ansaf d-none d-lg-block">
           <div class="divider"></div>
           <ul>
             <li>
@@ -86,13 +86,13 @@
 </div>
     <div class="container-fluid contact-top">
       <div class="row">
-        <div class="col-lg-12 pl-lg-0">
+        <div class="col-lg-12 pl-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
           <div class="content-wrapper d-flex">
             <div class="inline-block">
-                <img class="w-auto mt-lg-3" src="images/line-gray-11.png" alt="">
+                <img class="mt-3" src="images/line-gray-11.png" alt="">
             </div>
-            <div class="inline-block pl-lg-4">
+            <div class="inline-block pl-lg-4 pl-2">
                 <h2 class="text-dark-blue">
                   Contact Us
                 </h2>
@@ -103,22 +103,29 @@
     </div> 
     <div class="container-fluid contact-mid bg-dark-blue">
       <div class="row">
-        <div class="col-lg-12 px-lg-0">
-          <img class="content-mid" src="images/contact-mid-first-section-02.png" alt="">
+        <div class="col-lg-12 px-0">
+          <img class="content-mid d-none d-lg-block" src="images/contact-mid-first-section-02.png" alt="">
+          <img class="content-mid d-lg-none" src="images/contact-mid-first-section-mobile-03.jpg" alt="">
           <div class="content-wrapper d-flex">
             <div class="inline-block">
               <div class="content-wrapper d-flex">
                 <div class="inline-block">
-                    <img class="w-auto mt-lg-3" src="images/line-gray-11.png" alt="">
+                    <img class="mt-3" src="images/line-gray-11.png" alt="">
                 </div>
-                <div class="inline-block pl-lg-4">
+                <div class="inline-block pl-lg-4 pl-2">
                     <h2 class="text-white mb-lg-4">
                       Masih Memiliki Pertanyaan?
                     </h2>
-                    <p class="text-white font-roboto">
+                    <p class="text-white font-roboto d-none d-lg-block">
                       Kami akan senang hati mendengar pertanyaan Anda dan<br>
                       berusaha untuk memberikan informasinya. Silakan<br>
                       mengirimkannya melalui form di bawah ini.
+                    </p>
+                    <p class="text-white font-roboto d-lg-none">
+                      Kami akan senang hati mendengar pertanyaan<br>
+                      Anda dan berusaha untuk memberikan<br>
+                      informasinya. Silakan mengirimkannya melalui<br>
+                      form di bawah ini.
                     </p>
                 </div>
               </div>
@@ -148,7 +155,7 @@
             <label class="font-roboto text-gray">PESAN :</label>
             <textarea class="form-control input-gray" rows="7"></textarea>
           </div>
-          <a href="#" class="link-blue-border d-block py-lg-2 text-center">
+          <a href="#" class="link-blue-border d-block py-2 my-lg-0 my-5 text-center">
             KIRIM PESAN
           </a>
       </div>
@@ -156,7 +163,7 @@
     </div>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-12 px-lg-0">
+        <div class="col-lg-12 px-lg-0 d-none">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8153953.168616226!2d107.46645460032195!3d-3.71766482772731!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2df679e3fd85d3c5%3A0x2bb0c88e0315e87b!2sPT.%20Ansaf%20Inti%20Resources!5e0!3m2!1sen!2sid!4v1616899120793!5m2!1sen!2sid" style="border:0;" allowfullscreen="" class="w-100" height="700"></iframe>
         </div>
       </div>
@@ -164,15 +171,20 @@
     <div class="container-fluid footer-content">
       <div class="row text-center">
           <div class="col-lg-12">
-              <h4 class="text-dark-blue pb-lg-4">
+              <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
                 Ingin tau lebih mengenai Program kami?
+              </h4>
+              <h4 class="text-dark-blue pb-5 d-lg-none">
+                Ingin tau<br>
+                lebih mengenai<br>
+                Program kami?
               </h4>
           </div>
       </div>
       <div class="row">
           <div class="container">
               <div class="row text-center">
-                  <div class="col-lg-12">
+                  <div class="col-lg-12 pb-5">
                     <a href="contact.html" class="link-orange-border mx-lg-4">
                       <span class="text-orange">
                         HUBUNGI KAMI
@@ -183,27 +195,27 @@
           </div>
       </div>
   </div>
-  <div class="container-fluid footer-details mb-lg-5">
+  <div class="container-fluid footer-details mb-5">
     <div class="row">
       <div class="col-lg-2">
           <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 py-lg-0 py-4">
           <p class="text-gray">
               Kantor Taman E3.3 Unit B5 Jl Dr Ide Anak<br>
               Agung Gede Agung Lot 8.6-8.7 Kawasan Mega<br>
-              KuninganJakarta 12950
+              Kuningan Jakarta 12950
           </p>
       </div>
       <div class="col-lg-3 fax-column text-center">
           <a href="#" class="link-orange-border">
              <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> (0541) 260 226</span> 
           </a>
-          <p class="text-gray mt-lg-3">
+          <p class="text-gray mt-lg-3 mt-2 fax-details">
               Fax (0541) 261 532
           </p>
       </div>
-      <div class="col-lg-2 pl-lg-0 offset-lg-1">
+      <div class="col-lg-2 link-socmed pl-lg-0 offset-lg-1 pt-lg-0 pt-5">
           <a href="#" class="text-gray d-block">
               <i class="fab fa-facebook-square"></i> Ansaf Indonesia
           </a>
@@ -215,16 +227,16 @@
           </a>
       </div>
   </div>
-  </div>
-  <div class="container-fluid footer bg-dark-blue">
-      <div class="row">
-          <div class="col-lg-12">
-              <p class="text-white mt-lg-3 text-center">
-                  Copyright © 2020 PT Ansaf Inti Resources
-              </p>
-          </div>
-      </div>
-  </div>
+</div>
+<div class="container-fluid footer bg-dark-blue">
+    <div class="row">
+        <div class="col-lg-12">
+            <p class="text-white mt-3 text-center">
+                Copyright © 2020 PT Ansaf Inti Resources
+            </p>
+        </div>
+    </div>
+</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
