--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                                 sekedar kewajiban. Bagi kami, tanggung jawab<br>
                                 sosial melekat dengan operasi kami di manapun.
                             </p>
-                            <a href="csr.html" class="link-white-border my-3 d-inline-block">
+                            <a href="csr.html" class="link-white-border my-3 d-block">
                                 SELENGKAPNYA
                             </a>
                         </div>
