--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
             <img class="img-fluid logo" src="images/ansaf-logo.png" alt="">
           </a>
         </div>
-        <div class="col-lg-8 menu-wrap ml-lg-5">
+        <div class="col-lg-8 menu-wrap ml-lg-5 d-none d-lg-block">
           <ul>
             <li>
               <a href="about.html">
@@ -72,7 +72,7 @@
             </li> 
           </ul>
         </div>
-        <div class="col-lg-1 lang-ansaf">
+        <div class="col-lg-1 lang-ansaf d-none d-lg-block">
           <div class="divider"></div>
           <ul>
             <li>
@@ -86,13 +86,13 @@
 </div>
     <div class="container-fluid gallery-top">
       <div class="row">
-        <div class="col-lg-12 pl-lg-0">
+        <div class="col-lg-12 pl-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
           <div class="content-wrapper d-flex">
             <div class="inline-block">
-                <img class="w-auto mt-lg-3" src="images/line-gray-11.png" alt="">
+                <img class="mt-3" src="images/line-gray-11.png" alt="">
             </div>
-            <div class="inline-block pl-lg-4">
+            <div class="inline-block pl-lg-4 pl-2">
                 <h2 class="text-dark-blue">
                   Gallery
                 </h2>
@@ -114,7 +114,7 @@
           </p>
         </div>
       </div>
-      <div class="row thumbnail-gallery mx-lg-3 mt-lg-5 text-center">
+      <div class="row thumbnail-gallery mx-lg-3 mt-lg-5 text-center d-none d-lg-flex">
         <div class="col-lg-4 my-lg-3">
           <a href="#" data-toggle="modal" data-target="#exampleModal">
             <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
@@ -128,7 +128,9 @@
           </p>
         </div>
         <div class="col-lg-4 my-lg-3">
-          <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+          <a href="#" data-toggle="modal" data-target="#exampleModal">
+            <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+          </a>
           <h4 class="text-dark-blue mt-lg-4 mb-lg-2">
             Lorem Ipsum
           </h4>
@@ -138,7 +140,9 @@
           </p>
         </div>
         <div class="col-lg-4 my-lg-3">
-          <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+          <a href="#" data-toggle="modal" data-target="#exampleModal">
+            <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+          </a>
           <h4 class="text-dark-blue mt-lg-4 mb-lg-2">
             Lorem Ipsum
           </h4>
@@ -148,7 +152,9 @@
           </p>
         </div>
         <div class="col-lg-4 my-lg-3">
-          <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+          <a href="#" data-toggle="modal" data-target="#exampleModal">
+            <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+          </a>
           <h4 class="text-dark-blue mt-lg-4 mb-lg-2">
             Lorem Ipsum
           </h4>
@@ -158,7 +164,9 @@
           </p>
         </div>
         <div class="col-lg-4 my-lg-3">
-          <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+          <a href="#" data-toggle="modal" data-target="#exampleModal">
+            <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+          </a>
           <h4 class="text-dark-blue mt-lg-4 mb-lg-2">
             Lorem Ipsum
           </h4>
@@ -168,7 +176,9 @@
           </p>
         </div>
         <div class="col-lg-4 my-lg-3">
-          <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+          <a href="#" data-toggle="modal" data-target="#exampleModal">
+            <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+          </a>
           <h4 class="text-dark-blue mt-lg-4 mb-lg-2">
             Lorem Ipsum
           </h4>
@@ -178,7 +188,9 @@
           </p>
         </div>
         <div class="col-lg-4 my-lg-3">
-          <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+          <a href="#" data-toggle="modal" data-target="#exampleModal">
+            <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+          </a>
           <h4 class="text-dark-blue mt-lg-4 mb-lg-2">
             Lorem Ipsum
           </h4>
@@ -188,17 +200,9 @@
           </p>
         </div>
         <div class="col-lg-4 my-lg-3">
-          <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
-          <h4 class="text-dark-blue mt-lg-4 mb-lg-2">
-            Lorem Ipsum
-          </h4>
-          <p class="text-orange">
-            Kalimantan Timur<br>
-            September 2020
-          </p>
-        </div>
-        <div class="col-lg-4 my-lg-3">
-          <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+          <a href="#" data-toggle="modal" data-target="#exampleModal">
+            <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+          </a>
           <h4 class="text-dark-blue mt-lg-4 mb-lg-2">
             Lorem Ipsum
           </h4>
@@ -208,13 +212,125 @@
           </p>
         </div>
       </div>
+      <div class="row d-lg-none my-5 mx-2">
+        <div class="carousel-mobile-projects-list owl-theme">
+          <div class="item">
+            <div class="row">
+              <div class="col-6 my-3">
+                <a href="#" data-toggle="modal" data-target="#exampleModal">
+                  <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+                </a>
+                <h5 class="text-dark-blue mt-4 mb-2">
+                  Lorem Ipsum
+                </h5>
+              </div>
+              <div class="col-6 my-3">
+                <a href="#" data-toggle="modal" data-target="#exampleModal">
+                  <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+                </a>
+                <h5 class="text-dark-blue mt-4 mb-2">
+                  Lorem Ipsum
+                </h5>
+              </div>
+              <div class="col-6 my-3">
+                <a href="#" data-toggle="modal" data-target="#exampleModal">
+                  <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+                </a>
+                <h5 class="text-dark-blue mt-4 mb-2">
+                  Lorem Ipsum
+                </h5>
+              </div>
+              <div class="col-6 my-3">
+                <a href="#" data-toggle="modal" data-target="#exampleModal">
+                  <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+                </a>
+                <h5 class="text-dark-blue mt-4 mb-2">
+                  Lorem Ipsum
+                </h5>
+              </div>
+              <div class="col-6 my-3">
+                <a href="#" data-toggle="modal" data-target="#exampleModal">
+                  <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+                </a>
+                <h5 class="text-dark-blue mt-4 mb-2">
+                  Lorem Ipsum
+                </h5>
+              </div>
+              <div class="col-6 my-3">
+                <a href="#" data-toggle="modal" data-target="#exampleModal">
+                  <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+                </a>
+                <h5 class="text-dark-blue mt-4 mb-2">
+                  Lorem Ipsum
+                </h5>
+              </div>
+            </div>
+            <hr class="d-lg-none mt-4 mb-5"> 
+            <h6 class="text-right my-5">1/4</h6>
+          </div>
+          <div class="item">
+            <div class="row">
+              <div class="col-6 my-3">
+                <a href="#" data-toggle="modal" data-target="#exampleModal">
+                  <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+                </a>
+                <h5 class="text-dark-blue mt-4 mb-2">
+                  Lorem Ipsum
+                </h5>
+              </div>
+              <div class="col-6 my-3">
+                <a href="#" data-toggle="modal" data-target="#exampleModal">
+                  <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+                </a>
+                <h5 class="text-dark-blue mt-4 mb-2">
+                  Lorem Ipsum
+                </h5>
+              </div>
+              <div class="col-6 my-3">
+                <a href="#" data-toggle="modal" data-target="#exampleModal">
+                  <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+                </a>
+                <h5 class="text-dark-blue mt-4 mb-2">
+                  Lorem Ipsum
+                </h5>
+              </div>
+              <div class="col-6 my-3">
+                <a href="#" data-toggle="modal" data-target="#exampleModal">
+                  <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+                </a>
+                <h5 class="text-dark-blue mt-4 mb-2">
+                  Lorem Ipsum
+                </h5>
+              </div>
+              <div class="col-6 my-3">
+                <a href="#" data-toggle="modal" data-target="#exampleModal">
+                  <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+                </a>
+                <h5 class="text-dark-blue mt-4 mb-2">
+                  Lorem Ipsum
+                </h5>
+              </div>
+              <div class="col-6 my-3">
+                <a href="#" data-toggle="modal" data-target="#exampleModal">
+                  <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+                </a>
+                <h5 class="text-dark-blue mt-4 mb-2">
+                  Lorem Ipsum
+                </h5>
+              </div>
+            </div>
+            <hr class="d-lg-none mt-4 mb-5"> 
+            <h6 class="text-right my-5">2/4</h6>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-gallery" role="document">
         <div class="modal-content">
           <div class="modal-body">
-            <div class="row">
+            <div class="row d-none d-lg-flex">
               <div class="col-lg-7 pr-lg-0">
                 <div class="carousel-gallery owl-theme">
                   <div class="item">
@@ -252,6 +368,35 @@
                 </div>
               </div>
             </div>
+            <div class="row d-lg-none">
+              <div class="col-lg-12 pt-5 mt-4">
+                <img class="float-right" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
+                <h2 class="text-white mt-5 pt-5 mb-4">
+                  Lorem Ipsum
+                </h2>
+                <div class="carousel-gallery owl-theme">
+                  <div class="item">
+                    <img src="images/gallery-thumbnail-content-03.jpg" alt="">
+                  </div>
+                  <div class="item">
+                    <img src="images/gallery-thumbnail-content-03.jpg" alt="">
+                  </div>
+                  <div class="item">
+                    <img src="images/gallery-thumbnail-content-03.jpg" alt="">
+                  </div>
+                </div>
+                <h6 class="text-orange my-4">
+                  Kalimantan Timur<br>
+                  23 September 2020
+                </h6>
+                <p class="text-white">
+                  Lorem ipsum dolor sit amet, consectetuer<br>
+                  adipiscing elit, sed diam nonummy nibh<br>
+                  euismod tincidunt ut laoreet dolore magna<br>
+                  aliquam erat volutpat.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -259,15 +404,19 @@
     <div class="container-fluid footer-content">
       <div class="row text-center">
           <div class="col-lg-12">
-              <h4 class="text-dark-blue pb-lg-4">
+              <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
                 Masih ada pertanyaan?
+              </h4>
+              <h4 class="text-dark-blue pb-5 d-lg-none">
+                Masih ada<br>
+                pertanyaan?
               </h4>
           </div>
       </div>
       <div class="row">
           <div class="container">
               <div class="row text-center">
-                  <div class="col-lg-12">
+                  <div class="col-lg-12 pb-5">
                     <a href="contact.html" class="link-orange-border mx-lg-4">
                       <span class="text-orange">
                         HUBUNGI KAMI
@@ -278,27 +427,27 @@
           </div>
       </div>
   </div>
-  <div class="container-fluid footer-details mb-lg-5">
+  <div class="container-fluid footer-details mb-5">
     <div class="row">
       <div class="col-lg-2">
           <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 py-lg-0 py-4">
           <p class="text-gray">
               Kantor Taman E3.3 Unit B5 Jl Dr Ide Anak<br>
               Agung Gede Agung Lot 8.6-8.7 Kawasan Mega<br>
-              KuninganJakarta 12950
+              Kuningan Jakarta 12950
           </p>
       </div>
       <div class="col-lg-3 fax-column text-center">
           <a href="#" class="link-orange-border">
              <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> (0541) 260 226</span> 
           </a>
-          <p class="text-gray mt-lg-3">
+          <p class="text-gray mt-lg-3 mt-2 fax-details">
               Fax (0541) 261 532
           </p>
       </div>
-      <div class="col-lg-2 pl-lg-0 offset-lg-1">
+      <div class="col-lg-2 link-socmed pl-lg-0 offset-lg-1 pt-lg-0 pt-5">
           <a href="#" class="text-gray d-block">
               <i class="fab fa-facebook-square"></i> Ansaf Indonesia
           </a>
@@ -310,16 +459,16 @@
           </a>
       </div>
   </div>
-  </div>
-  <div class="container-fluid footer bg-dark-blue">
-      <div class="row">
-          <div class="col-lg-12">
-              <p class="text-white mt-lg-3 text-center">
-                  Copyright © 2020 PT Ansaf Inti Resources
-              </p>
-          </div>
-      </div>
-  </div>
+</div>
+<div class="container-fluid footer bg-dark-blue">
+    <div class="row">
+        <div class="col-lg-12">
+            <p class="text-white mt-3 text-center">
+                Copyright © 2020 PT Ansaf Inti Resources
+            </p>
+        </div>
+    </div>
+</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
