--- a/index.html
+++ b/index.html
@@ -578,10 +578,12 @@
                                 sekedar kewajiban. Bagi kami, tanggung jawab<br>
                                 sosial melekat dengan operasi kami di manapun.
                             </p>
-                            <a href="csr.html" class="link-white-border my-3 d-block">
-                                SELENGKAPNYA
-                            </a>
                         </div>
+                    </div>
+                    <div class="d-block mx-4 px-3">
+                        <a href="csr.html" class="text-center link-white-border my-3 d-block">
+                            SELENGKAPNYA
+                        </a>
                     </div>
                 </div>
             </div>
