--- a/index.html
+++ b/index.html
@@ -59,6 +59,18 @@
                   <a href="csr.html">
                     CSR
                   </a>
+                  <ul>
+                    <li>
+                      <a href="about.html">
+                       CSR Program
+                      </a>
+                    </li>
+                    <li>
+                      <a href="viison-mission.html">
+                        Cunihin Social Responsibility
+                      </a>
+                    </li>
+                  </ul>
                 </li>
                 <li>
                   <a href="gallery.html">
@@ -128,7 +140,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <img class="img-fluid float-right d-none d-lg-block" src="images/home-top-image-slider-07.png" alt="">
+                                <img class="img-fluid float-right d-none d-lg-block" src="images/home-top-image-slider-07-02.png" alt="">
                                 <img class="img-fluid float-right d-lg-none" src="images/home-top-image-slider-mobile-15.jpg" alt="">
                                 <div class="slide-number">
                                     <h6 class="text-white">
