--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                   </a>
                   <ul>
                     <li>
-                      <a href="about.html">
+                      <a href="csr.html">
                        CSR Program
                       </a>
                     </li>
                     <li>
-                      <a href="viison-mission.html">
-                        Cunihin Social Responsibility
+                      <a href="csr-activities.html">
+                        CSR Activities
                       </a>
                     </li>
                   </ul>
