--- a/index.html
+++ b/index.html
@@ -94,6 +94,80 @@
                 </li>
               </ul>
             </div>
+            <div class="menu">
+                <a href="#" class="menu-icon">
+                    <img src="images/menu-icon-15.png" alt="">
+                </a>
+            </div>
+            <div class="side-menu">
+                <a href="#">
+                    <img class="logo" src="images/ansaf-logo.png" alt="">
+                </a>
+                <a class="float-right close-menu-icon" href="#">
+                    <img src="images/icon-times-16.png" alt="">
+                </a>
+                <ul>
+                    <li>
+                      <a href="#">
+                        About Us
+                      </a>
+                      <ul>
+                        <li>
+                          <a href="about.html">
+                            Company Profile
+                          </a>
+                        </li>
+                        <li>
+                          <a href="viison-mission.html">
+                            Vision & Mission
+                          </a>
+                        </li>
+                        <li>
+                          <a href="bod.html">
+                            Board of Directors
+                          </a>
+                        </li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a href="businesses.html">
+                        Our Businesses
+                      </a>
+                    </li>
+                    <li>
+                      <a href="projects.html">
+                        Our Projects
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        CSR
+                      </a>
+                      <ul>
+                        <li>
+                          <a href="csr.html">
+                           CSR Program
+                          </a>
+                        </li>
+                        <li>
+                          <a href="csr-activities.html">
+                            CSR Activities
+                          </a>
+                        </li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a href="gallery.html">
+                        Gallery
+                      </a>
+                    </li>
+                    <li>
+                      <a href="contact.html">
+                        Contact Us
+                      </a>
+                    </li> 
+                  </ul>
+            </div>
         </div>
 </div>
     <div class="container-fluid bg-home-top overflow-hidden">
@@ -412,6 +486,9 @@
                                 <h6 class="text-white">
                                     ANSAF MINING
                                 </h6>
+                                <h6 class="d-lg-none slide-number">
+                                    1/3
+                                </h6>
                             </div>
                         </div>
                     </div>
@@ -424,6 +501,9 @@
                             <div class="title">
                                 <h6 class="text-white">
                                     ANSAF SERVICES
+                                </h6>
+                                <h6 class="d-lg-none slide-number">
+                                    2/3
                                 </h6>
                             </div>
                         </div>
@@ -438,30 +518,9 @@
                                 <h6 class="text-white">
                                     ANSAF LOGISTIC
                                 </h6>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="thumbnail">
-                            <div class="image-thumbnail">
-                                <img class="img-fluid" src="images/home-our-business-10.jpg">
-                                <img class="img-fluid shadow" src="images/thubmnail-shadow-blue-10.png">
-                            </div>
-                            <div class="title">
-                                <h6 class="text-white">
-                                    ANSAF MINING
+                                <h6 class="d-lg-none slide-number">
+                                    3/3
                                 </h6>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="thumbnail">
-                            <div class="image-thumbnail">
-                                <img class="img-fluid" src="images/home-our-business-10.jpg">
-                                <img class="img-fluid shadow" src="images/thubmnail-shadow-blue-10.png">
-                            </div>
-                            <div class="title text-white">
-                                ANSAF MINING
                             </div>
                         </div>
                     </div>
@@ -521,15 +580,21 @@
                                 <div class="carousel-ourbusiness">
                                     <div class="item">
                                         <img class="img-fluid w-100 d-block" src="images/our-value-content-images-10-08.jpg" alt="">
-                                        <h6 class="text-white title-thumbnail">Sinergi yang Kuat</h6>
+                                        <h6 class="text-white title-thumbnail d-none d-lg-block">Sinergi yang Kuat</h6>
+                                        <h6 class="title-thumbnail d-lg-none">Sinergi yang Kuat</h6>
+                                        <h6 class="slide-number d-lg-none">1/3</h6>
                                     </div>
                                     <div class="item">
                                         <img class="img-fluid w-100 d-block" src="images/our-value-content-images-10-09.jpg" alt="">
-                                        <h6 class="text-white title-thumbnail">Setulus Hati</h6>
+                                        <h6 class="text-white title-thumbnail d-none d-lg-block">Setulus Hati</h6>
+                                        <h6 class="title-thumbnail d-lg-none">Setulus Hati</h6>
+                                        <h6 class="slide-number d-lg-none">2/3</h6>
                                     </div>
                                     <div class="item">
-                                        <img class="img-fluid w-100 d-block" src="images/our-value-content-images-10-09.jpg" alt="">
-                                        <h6 class="text-white title-thumbnail">Setulus Hati</h6>
+                                        <img class="img-fluid w-100 d-block" src="images/our-value-content-images-10-10.jpg" alt="">
+                                        <h6 class="text-white title-thumbnail d-none d-lg-block">Setulus Hati</h6>
+                                        <h6 class="title-thumbnail d-lg-none">Beroperasi Secara Produktif</h6>
+                                        <h6 class="slide-number d-lg-none">3/3</h6>
                                     </div>
                                 </div>
                             </div>
