--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
                 </li>
               </ul>
             </div>
-            <div class="menu">
+            <div class="menu d-lg-none">
                 <a href="#" class="menu-icon">
                     <img src="images/menu-icon-15.png" alt="">
                 </a>
             </div>
-            <div class="side-menu">
+            <div class="side-menu d-lg-none">
                 <a href="#">
                     <img class="logo" src="images/ansaf-logo.png" alt="">
                 </a>
@@ -167,6 +167,21 @@
                       </a>
                     </li> 
                   </ul>
+                  <hr class="my-5">
+                  <div class="lang-ansaf">
+                    <ul>
+                        <li>
+                            <a href="#">
+                                ID
+                            </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                              EN
+                          </a>
+                      </li>
+                    </ul>
+                  </div>
             </div>
         </div>
 </div>
