--- a/gallery.html
+++ b/gallery.html
@@ -82,6 +82,95 @@
             </li>
           </ul>
         </div>
+        <div class="menu d-lg-none">
+          <a href="#" class="menu-icon">
+              <img src="images/menu-icon-15.png" alt="">
+          </a>
+      </div>
+      <div class="side-menu d-lg-none">
+          <a href="#">
+              <img class="logo" src="images/ansaf-logo.png" alt="">
+          </a>
+          <a class="float-right close-menu-icon" href="#">
+              <img src="images/icon-times-16.png" alt="">
+          </a>
+          <ul>
+              <li>
+                <a href="#">
+                  About Us
+                </a>
+                <ul>
+                  <li>
+                    <a href="about.html">
+                      Company Profile
+                    </a>
+                  </li>
+                  <li>
+                    <a href="viison-mission.html">
+                      Vision & Mission
+                    </a>
+                  </li>
+                  <li>
+                    <a href="bod.html">
+                      Board of Directors
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href="businesses.html">
+                  Our Businesses
+                </a>
+              </li>
+              <li>
+                <a href="projects.html">
+                  Our Projects
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  CSR
+                </a>
+                <ul>
+                  <li>
+                    <a href="csr.html">
+                     CSR Program
+                    </a>
+                  </li>
+                  <li>
+                    <a href="csr-activities.html">
+                      CSR Activities
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href="gallery.html">
+                  Gallery
+                </a>
+              </li>
+              <li>
+                <a href="contact.html">
+                  Contact Us
+                </a>
+              </li> 
+            </ul>
+            <hr class="my-5">
+            <div class="lang-ansaf">
+              <ul>
+                  <li>
+                      <a href="#">
+                          ID
+                      </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                        EN
+                    </a>
+                </li>
+              </ul>
+            </div>
+      </div>
     </div>
 </div>
     <div class="container-fluid gallery-top">
