--- a/existing-projects.html
+++ b/existing-projects.html
@@ -56,9 +56,21 @@
               </a>
             </li>
             <li>
-              <a href="csr.html">
+              <a href="#">
                 CSR
               </a>
+              <ul>
+                <li>
+                  <a href="csr.html">
+                   CSR Program
+                  </a>
+                </li>
+                <li>
+                  <a href="csr-activities.html">
+                    CSR Activities
+                  </a>
+                </li>
+              </ul>
             </li>
             <li>
               <a href="gallery.html">
