--- a/about.html
+++ b/about.html
@@ -223,11 +223,17 @@
                 <h2 class="text-orange font-50">
                   “
                 </h2>
-                <p class="text-white font-titillium-italic">
+                <p class="text-white font-titillium-italic d-none d-lg-block">
                   ...untuk kami di Ansaf, baik tidaklah jika kami mampu berkontribusikan<br>
                   yang paling OPTIMAL - dengan sepenuh hati untuk tumbuh BERSAMA<br>
                   dengan komitmen dan kerjasama tim yang kuat.
                 </p>
+                <h6 class="text-white font-titillium-italic d-lg-none">
+                  ...untuk kami di Ansaf, baik tidaklah jika kami<br>
+                  mampu berkontribusikan yang paling OPTIMAL -<br>
+                  dengan sepenuh hati untuk tumbuh BERSAMA<br>
+                  dengan komitmen dan kerjasama tim yang kuat.
+                </h6>
             </div>
           </div>
           <img class="content-mid d-none d-lg-block" src="images/mid-content-images-05.png" alt="">
@@ -242,9 +248,9 @@
             <div class="item">
                 <div class="row">
                   <div class="col-lg-3">
-                    <h2 class="text-white title-year">
+                    <h1 class="text-white title-year">
                       2011
-                    </h2>
+                    </h1>
                   </div>
                   <div class="col-lg-9">
                     <p class="text-white">
@@ -259,9 +265,9 @@
             <div class="item">
               <div class="row">
                 <div class="col-lg-3">
-                  <h2 class="text-white title-year">
+                  <h1 class="text-white title-year">
                     2011
-                  </h2>
+                  </h1>
                 </div>
                 <div class="col-lg-9">
                   <p class="text-white">
