--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="viison-mission.html">
+                      <a href="vision-mission.html">
                         Vision & Mission
                       </a>
                     </li>
@@ -118,7 +118,7 @@
                           </a>
                         </li>
                         <li>
-                          <a href="viison-mission.html">
+                          <a href="vision-mission.html">
                             Vision & Mission
                           </a>
                         </li>
@@ -594,19 +594,19 @@
                             <div class="col-lg-12">
                                 <div class="carousel-ourbusiness">
                                     <div class="item">
-                                        <img class="img-fluid w-100 d-block" src="images/our-value-content-images-10-08.jpg" alt="">
+                                        <img class="img-fluid w-100 d-block" src="images/our-value-content-images-mobile-15.jpg" alt="">
                                         <h6 class="text-white title-thumbnail d-none d-lg-block">Sinergi yang Kuat</h6>
                                         <h6 class="title-thumbnail d-lg-none">Sinergi yang Kuat</h6>
                                         <h6 class="slide-number d-lg-none">1/3</h6>
                                     </div>
                                     <div class="item">
-                                        <img class="img-fluid w-100 d-block" src="images/our-value-content-images-10-09.jpg" alt="">
+                                        <img class="img-fluid w-100 d-block" src="images/our-value-content-images-mobile-16.jpg" alt="">
                                         <h6 class="text-white title-thumbnail d-none d-lg-block">Setulus Hati</h6>
                                         <h6 class="title-thumbnail d-lg-none">Setulus Hati</h6>
                                         <h6 class="slide-number d-lg-none">2/3</h6>
                                     </div>
                                     <div class="item">
-                                        <img class="img-fluid w-100 d-block" src="images/our-value-content-images-10-10.jpg" alt="">
+                                        <img class="img-fluid w-100 d-block" src="images/our-value-content-images-mobile-17.jpg" alt="">
                                         <h6 class="text-white title-thumbnail d-none d-lg-block">Setulus Hati</h6>
                                         <h6 class="title-thumbnail d-lg-none">Beroperasi Secara Produktif</h6>
                                         <h6 class="slide-number d-lg-none">3/3</h6>
