--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                                 <img class="img-fluid shadow" src="images/thubmnail-shadow-blue-10.png">
                             </div>
                             <div class="title">
-                                <h6 class="text-white">
+                                <h6 class="text-white subtitle">
                                     ANSAF MINING
                                 </h6>
                                 <h6 class="d-lg-none slide-number">
