--- a/about.html
+++ b/about.html
@@ -248,15 +248,26 @@
             <div class="item">
                 <div class="row">
                   <div class="col-lg-3">
-                    <h1 class="text-white title-year">
+                    <h2 class="text-white title-year d-none d-lg-block">
+                      2011
+                    </h2>
+                    <h1 class="text-white title-year d-lg-none">
                       2011
                     </h1>
                   </div>
                   <div class="col-lg-9">
-                    <p class="text-white">
+                    <p class="text-white d-none d-lg-block">
                       Tahun 2011 Ansaf mulai masuk ke sektor pertambangan melalui proses<br>
                       jual beli batubara (coal trading).  Serangkaian sandungan dalam proses ini<br>
                       justru mendorong Pendiri untuk masuk ke kegiatan langsung dalam<br>
+                      penambangan batubara.
+                    </p>
+                    <p class="text-white d-lg-none">
+                      Tahun 2011 Ansaf mulai masuk ke sektor<br>
+                       pertambangan melalui proses jual beli batubara<br>
+                      (coal trading).  Serangkaian sandungan dalam<br>
+                      proses ini justru mendorong Pendiri untuk<br>
+                      masuk ke kegiatan langsung dalam<br>
                       penambangan batubara.
                     </p>
                   </div>
@@ -265,15 +276,26 @@
             <div class="item">
               <div class="row">
                 <div class="col-lg-3">
-                  <h1 class="text-white title-year">
+                  <h2 class="text-white title-year d-none d-lg-block">
+                    2011
+                  </h2>
+                  <h1 class="text-white title-year d-lg-none">
                     2011
                   </h1>
                 </div>
                 <div class="col-lg-9">
-                  <p class="text-white">
+                  <p class="text-white d-none d-lg-block">
                     Tahun 2011 Ansaf mulai masuk ke sektor pertambangan melalui proses<br>
                     jual beli batubara (coal trading).  Serangkaian sandungan dalam proses ini<br>
                     justru mendorong Pendiri untuk masuk ke kegiatan langsung dalam<br>
+                    penambangan batubara.
+                  </p>
+                  <p class="text-white d-lg-none">
+                    Tahun 2011 Ansaf mulai masuk ke sektor<br>
+                     pertambangan melalui proses jual beli batubara<br>
+                    (coal trading).  Serangkaian sandungan dalam<br>
+                    proses ini justru mendorong Pendiri untuk<br>
+                    masuk ke kegiatan langsung dalam<br>
                     penambangan batubara.
                   </p>
                 </div>
