--- a/businesses.html
+++ b/businesses.html
@@ -205,17 +205,34 @@
     <div class="container-fluid bus-mid">
       <div class="row first-section">
         <div class="col-lg-12">
-          <h3 class="text-white my-4">
+          <h3 class="text-white my-4 d-none d-lg-block">
             PT Ansaf Inti Resources
           </h3>
-          <p class="text-white">
-            PT Ansaf Inti Resources (AIR) merupakan perusahaan yang bergerak dibidang pertambangan yang beroperasi di provinsi<br>
-            Kalimantan Timur. Perusahaan yang berdiri pada 22 juli 2011 memulai usahanya sebagai perusahaan yang bergerak di coal<br>
-            trading company. Pada tahun 2014 PT Ansaf Inti Resources memulai usaha lain sebagai perusahaan jasa pertambangan.<br>
-            Sedangkan pada tahun 2018 PT Ansaf Inti Resources mengembangkan usaha lain dibidang layanan port & jetty batu bara<br>
-            sehingga sampai saat ini PT Ansaf Inti Resources memiliki 5 bisnis utama dibidang pertambangan yang disebut Ansaf Mining,<br>
-            Ansaf Services, Ansaf Logistic, Ansaf Trading dan Ansaf Rent.
+          <h3 class="text-white my-4 d-lg-none">
+            PT Ansaf<br>
+            Inti Resources
+          </h3>
+          <p class="text-white d-none d-lg-block">
+            PT Ansaf Inti Resources (AIR) merupakan<br>
+            perusahaan yang bergerak dibidang<br>
+            pertambangan yang beroperasi di provinsi<br>
+            Kalimantan Timur. Perusahaan yang berdiri<br>
+            pada 22 juli 2011 memulai usahanya sebagai<br>
+            perusahaan yang bergerak di coal trading<br>
+             company. Pada tahun 2014 PT Ansaf Inti<br>
+             Resources memulai usaha lain sebagai<br>
+             perusahaan jasa pertambangan. Sedangkan<br>
+             pada tahun 2018 PT Ansaf Inti Resources<br>
+             mengembangkan usaha lain dibidang layanan<br>
+             port & jetty batu bara sehingga sampai saat ini<br>
+             PT Ansaf Inti Resources memiliki 5 bisnis<br>
+             utama dibidang pertambangan yang disebut<br>
+             Ansaf Mining, Ansaf Services, Ansaf Logistic,<br>
+             Ansaf Trading dan Ansaf Rent.
           </p>
+          <h6 class="text-white d-lg-none">
+            PT Ansaf Inti Resources (AIR) merupakan perusahaan yang bergerak dibidang pertambangan yang beroperasi di provinsi Kalimantan Timur. Perusahaan yang berdiri pada 22 juli 2011 memulai usahanya sebagai perusahaan yang bergerak di coal trading company. Pada tahun 2014 PT Ansaf Inti Resources memulai usaha lain sebagai perusahaan jasa pertambangan. Sedangkan pada tahun 2018 PT Ansaf Inti Resources mengembangkan usaha lain dibidang layanan port & jetty batu bara sehingga sampai saat ini PT Ansaf Inti Resources memiliki 5 bisnis utama dibidang pertambangan yang disebut Ansaf Mining, Ansaf Services, Ansaf Logistic, Ansaf Trading dan Ansaf Rent.
+          </h6>
         </div>
       </div>
       <div class="row thumbnail-bus bg-light-gray">
