--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
                             </a>
                           </li>
                           <li>
-                            <a href="viison-mission.html">
+                            <a href="vision-mission.html">
                               Vision & Mission
                             </a>
                           </li>
