--- a/about.html
+++ b/about.html
@@ -301,6 +301,34 @@
                 </div>
               </div>
           </div>
+          <div class="item">
+            <div class="row">
+              <div class="col-lg-3">
+                <h2 class="text-white title-year d-none d-lg-block">
+                  2011
+                </h2>
+                <h1 class="text-white title-year d-lg-none">
+                  2011
+                </h1>
+              </div>
+              <div class="col-lg-9">
+                <p class="text-white d-none d-lg-block">
+                  Tahun 2011 Ansaf mulai masuk ke sektor pertambangan melalui proses<br>
+                  jual beli batubara (coal trading).  Serangkaian sandungan dalam proses ini<br>
+                  justru mendorong Pendiri untuk masuk ke kegiatan langsung dalam<br>
+                  penambangan batubara.
+                </p>
+                <p class="text-white d-lg-none">
+                  Tahun 2011 Ansaf mulai masuk ke sektor<br>
+                   pertambangan melalui proses jual beli batubara<br>
+                  (coal trading).  Serangkaian sandungan dalam<br>
+                  proses ini justru mendorong Pendiri untuk<br>
+                  masuk ke kegiatan langsung dalam<br>
+                  penambangan batubara.
+                </p>
+              </div>
+            </div>
+        </div>
           </div>
         </div>
         <img class="move-right guy d-none d-lg-block" src="images/about-content-guy-05.png" alt="">
